[package]
name = "dbg_hex"
version = "0.1.1"
authors = ["wcampbell"]
edition = "2018"
repository = "https://github.com/wcampbell0x2a/dbg_hex"
description = "display dbg result in hexadecimal {:#x?} format"
license = "MIT"
rust-version = "1.39.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
